# damas

./: .gitignore  AUTHORS  CMakeLists.txt  GenerateProjectFilesMSVC2017.bat  GenerateProjectFilesXcode.sh  LICENSE  README.md
documentation/: Doxyfile  README.md
documentation/manual/: Bibliography.md  BuildFromSource.md  CodingRules.md  Dependencies.md  DocumentationGuidelines.md  INDEX.md  Versioning.md
example/: main.cpp
include/: damas  damas.hpp
include/concept/: comment.hpp  condition.hpp  evaluation.hpp  function.hpp  heap.hpp  instruction.hpp  keyword.hpp  literal.hpp  loop.hpp  name.hpp  namespace.hpp  object.hpp  operator.hpp  precedence.hpp  scope.hpp  stack.hpp  statement.hpp  storage.hpp  type.hpp  variable.hpp
include/core/: core.hpp  coretypes.hpp  cpuinfo.hpp  libinfo.hpp  platform.hpp
include/math/: math.hpp
include/memory/: algorithmic.hpp  array.hpp  memory.hpp
include/string/: crc32.hpp  string.hpp  utils.hpp  wstring.hpp
source/concept/: comment.cpp  condition.cpp  evaluation.cpp  function.cpp  heap.cpp  instruction.cpp  keyword.cpp  literal.cpp  loop.cpp  name.cpp  namespace.cpp  object.cpp  operator.cpp  precedence.cpp  scope.cpp  stack.cpp  statement.cpp  storage.cpp  type.cpp  variable.cpp
source/core/: cpuinfo.cpp  cpuinfo_generic.inl  cpuinfo_helpers.hpp  cpuinfo_linux.inl  cpuinfo_macos.inl  cpuinfo_p.cpp  cpuinfo_p.hpp  cpuinfo_windows.inl  libinfo.cpp
source/memory/: memory.cpp
source/string/: crc32.cpp  crc32.hpp  md5.cpp  md5.hpp  string.cpp  utils.cpp  uuid.cpp  uuid.hpp  wstring.cpp
tool/: README.md
tool/CMake/: AddLibraryModule.cmake  ConfigureGeneration.cmake  DetectCompiler.cmake  DetectGit.cmake  DetectTimestamp.cmake  DetectVersion.cmake  Install.cmake  Interpreter.cmake  Library.cmake  SetCompilerFlags.cmake  SubdirList.cmake
tool/Linux/: Generate_SublimeText_Project_GNU_GCC.sh.Sample
tool/Windows/: GenerateMinGW_Makefile_GCC.bat.Sample  GenerateVisualStudio_Solution_CLANG_LLVM.bat.Sample  GenerateVisualStudio_Solution_MSVC.bat.Sample  code_statistics.ps1
tool/macOS/: Generate_Xcode.sh.Sample
